force-app/main/default/objects/Story_Group__c/Story_Group__c.object-meta.xml
<CustomObject>
    <label>Story Group</label>
    <nameField>
        <label>Story Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Story Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>