force-app/main/default/objects/Story_Group__c/fields/Code_Required__c.field-meta.xml
<CustomField>
    <fullName>Code_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Code Required</label>
    <type>Checkbox</type>
</CustomField>