force-app/main/default/objects/Story_Group__c/fields/Community_Code_Required__c.field-meta.xml
<CustomField>
    <fullName>Community_Code_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Community Code Required</label>
    <type>Checkbox</type>
</CustomField>