force-app/main/default/objects/Story_Group__c/fields/Community_Config_Required__c.field-meta.xml
<CustomField>
    <fullName>Community_Config_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Community Config Required</label>
    <type>Checkbox</type>
</CustomField>