force-app/main/default/objects/Story_Group__c/fields/Contains_RM_functions__c.field-meta.xml
<CustomField>
    <fullName>Contains_RM_functions__c</fullName>
    <label>Contains RM functions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>