force-app/main/default/objects/Story_Group__c/fields/Data_Migration_Required__c.field-meta.xml
<CustomField>
    <fullName>Data_Migration_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Migration Required</label>
    <type>Checkbox</type>
</CustomField>