force-app/main/default/objects/Story_Group__c/fields/Estiamted_Size__c.field-meta.xml
<CustomField>
    <fullName>Estiamted_Size__c</fullName>
    <inlineHelpText>Effort required from 1 resource to complete 
if it is planned in roadmap 
High = &gt;2 Sprints
Medium = 1-2 Sprints
Low = &lt; 1 sprint )

OR 

Number of stories in group 
&gt; 40 = High
20-40 = Medium
&lt;20 = Low</inlineHelpText>
    <label>Estimated Effort Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>High</fullName>
                <isActive>false</isActive>
                <label>High</label>
            </value>
            <value>
                <fullName>Low</fullName>
                <isActive>false</isActive>
                <label>Low</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>