force-app/main/default/objects/Story_Group__c/fields/Integration_Required__c.field-meta.xml
<CustomField>
    <fullName>Integration_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Integration Required</label>
    <type>Checkbox</type>
</CustomField>