force-app/main/default/objects/Story_Group__c/fields/Requires_Config__c.field-meta.xml
<CustomField>
    <fullName>Requires_Config__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Config Required</label>
    <type>Checkbox</type>
</CustomField>