force-app/main/default/objects/Story_Group__c/fields/Third_Party_App_Required__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_App_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Third Party App Required</label>
    <type>Checkbox</type>
</CustomField>