force-app/main/default/objects/Story_Group__c/fields/Uncertainty_Description__c.field-meta.xml
<CustomField>
    <fullName>Uncertainty_Description__c</fullName>
    <label>Uncertainty Description</label>
    <type>TextArea</type>
</CustomField>