force-app/main/default/objects/Story_Group__c/fields/Urgency__c.field-meta.xml
<CustomField>
    <fullName>Urgency__c</fullName>
    <label>Urgency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>