force-app/main/default/objects/Story_Group__c/fields/Value_1_5__c.field-meta.xml
<CustomField>
    <fullName>Value_1_5__c</fullName>
    <inlineHelpText>1-5 with 5 being the highest</inlineHelpText>
    <label>Value (1-5)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>