force-app/main/default/objects/Story_Group__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Phase__c</columns>
    <columns>Planned_Sprint__c</columns>
    <columns>Contains_RM_functions__c</columns>
    <columns>Estiamted_Size__c</columns>
    <columns>Description__c</columns>
    <columns>Requires_Config__c</columns>
    <columns>Code_Required__c</columns>
    <columns>Community_Config_Required__c</columns>
    <columns>Community_Code_Required__c</columns>
    <columns>Integration_Required__c</columns>
    <columns>Data_Migration_Required__c</columns>
    <columns>Third_Party_App_Required__c</columns>
    <columns>Uncertainty_Involved__c</columns>
    <columns>Uncertainty_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>