force-app/main/default/objects/Story_Group__c/listViews/Phase_1_Story_Groups.listView-meta.xml
<ListView>
    <fullName>Phase_1_Story_Groups</fullName>
    <columns>NAME</columns>
    <columns>Phase__c</columns>
    <columns>Contains_RM_functions__c</columns>
    <columns>Estiamted_Size__c</columns>
    <columns>Description__c</columns>
    <columns>Requires_Config__c</columns>
    <columns>Code_Required__c</columns>
    <columns>Community_Config_Required__c</columns>
    <columns>Community_Code_Required__c</columns>
    <columns>Integration_Required__c</columns>
    <columns>Data_Migration_Required__c</columns>
    <columns>Third_Party_App_Required__c</columns>
    <columns>Uncertainty_Involved__c</columns>
    <columns>Uncertainty_Description__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Phase__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Phase 1 Story Groups</label>
</ListView>